fix: 전체 페이지에 overflow: hidden 스타일 적용

--- a/src/pages/JourneyList/JourneyList.module.scss
+++ b/src/pages/JourneyList/JourneyList.module.scss
@@ -3,6 +3,8 @@
   width: 100%;
   padding-top: 3.25rem;
 
+  overflow: hidden;
+
   .journey-list-wrapper {
     height: calc(100% - 3rem);
     overflow: hidden scroll;
